welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(estFaceMur()){
  ^SnakeBuggle:12: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return false
  ^